--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
       </div>
 
       <div class="btns">
-        <button type="button" class="btn1">1</button>
-        <button type="button" class="btn2">2</button>
-        <button type="button" class="btn3">3</button>
-        <button type="button" class="btn4">4</button>
-        <button type="button" class="btn5">5</button>
-        <button type="button" class="btn6">6</button>
-        <button type="button" class="btn7">7</button>
-        <button type="button" class="btn8">8</button>
-        <button type="button" class="btn9">9</button>
-        <button type="button" class="btn10">10</button>
-        <button type="button" class="btn1">+</button>
-        <button type="button" class="btn2">-</button>
-        <button type="button" class="btn3">X</button>
-        <button type="button" class="btn4">/</button>
-        <button type="button" class="btn5">C</button>
+        <button type="button" class="btn1">7</button>
+        <button type="button" class="btn2">8</button>
+        <button type="button" class="btn3">9</button>
+        <button type="button" class="btn4">C</button>
+        <button type="button" class="btn5">4</button>
+        <button type="button" class="btn6">5</button>
+        <button type="button" class="btn7">6</button>
+        <button type="button" class="btn8">/</button>
+        <button type="button" class="btn9">1</button>
+        <button type="button" class="btn10">2</button>
+        <button type="button" class="btn1">3</button>
+        <button type="button" class="btn2">x</button>
+        <button type="button" class="btn3">0</button>
+        <button type="button" class="btn4">+</button>
+        <button type="button" class="btn5">-</button>
         <button type="button" class="btn6">=</button>
       </div>
     </div>
