--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
       <div class="btns">
         <button type="button" onclick="btn7()" class="btn1">7</button>
-        <button type="button" onclick="btn8()"  class="btn2">8</button>
-        <button type="button" onclick="btn9()"  class="btn3">9</button>
-        <button type="button"  class="btn4">C</button>
-        <button type="button" onclick="btn4()"  class="btn5">4</button>
-        <button type="button" onclick="btn5()"  class="btn6">5</button>
-        <button type="button" onclick="btn7()"  class="btn7">6</button>
-        <button type="button" onclick="div()" class="btn8">/</button>
+        <button type="button" onclick="btn8()" class="btn2">8</button>
+        <button type="button" onclick="btn9()" class="btn3">9</button>
+        <button type="button" onclick="clr()" class="c">C</button>
+        <button type="button" onclick="btn4()" class="btn5">4</button>
+        <button type="button" onclick="btn5()" class="btn6">5</button>
+        <button type="button" onclick="btn7()" class="btn7">6</button>
+        <button type="button" onclick="div()"  class="btn8">/</button>
         <button type="button" onclick="btn1()" class="btn9">1</button>
-        <button type="button" onclick="btn2()"class="btn10">2</button>
-        <button type="button" onclick="btn3()"  class="btn1">3</button>
-        <button type="button" onclick="mult()"  class="btn2">*</button>
-        <button type="button" onclick="btn0()"  class="btn3">0</button>
+        <button type="button" onclick="btn2()" class="btn10">2</button>
+        <button type="button" onclick="btn3()" class="btn1">3</button>
+        <button type="button" onclick="mult()" class="btn2">*</button>
+        <button type="button" onclick="btn0()" class="btn3">0</button>
         <button type="button" onclick="add()" class="btn4">+</button>
         <button type="button" onclick="sub()" class="btn5">-</button>
         <button type="button" onclick="eql()" class="btn6">=</button>
